--- a/task4_html_css/Vladislav/www/index.html
+++ b/task4_html_css/Vladislav/www/index.html
@@ -90,7 +90,7 @@
                     <div class="line-element">
                         <p><b>Your message:</b></p>
                         <input>
-                        <p>Whi you want to notify?</p>
+                        <p>Who you want to notify?</p>
                     </div>
                     <div class="line-element">
                         <p><b>Sviatoslav</b></p>
